objects/Laser_Approval_Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_to_LAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_to_LFD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LFD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_to_LIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_LAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected LAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_LFD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected LFD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskProofs_FollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaskProofs FollowUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskQuote_FollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaskQuote FollowUp</label>
        <type>Checkbox</type>
    </fields>
    <label>Laser Approval Process</label>
</CustomObject>